--- a/package.json
+++ b/package.json
@@ -14,8 +14,21 @@
     "precommit": "npm run lint:fix"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.12",
+    "@mui/icons-material": "^5.15.12",
+    "@mui/material": "^5.15.12",
+    "@mui/x-charts": "^6.19.5",
+    "framer-motion": "^11.0.8",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.4",
+    "sort-by": "^1.2.0",
+    "vite-tsconfig-paths": "^4.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.0.3",
@@ -29,6 +42,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "husky": "^9.0.11",
+    "msw": "^2.2.3",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
