--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,23 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "~assets/*": ["src/assets/*"],
+      "~components/*": ["src/components/*"],
+      "~contexts/*": ["src/contexts/*"],
+      "~hooks/*": ["src/hooks/*"],
+      "~layouts/*": ["src/layouts/*"],
+      "~pages/*": ["src/pages/*"],
+      "~services/*": ["src/services/*"],
+      "~store/*": ["src/store/*"],
+      "~types/*": ["src/types/*"],
+      "~utils/*": ["src/utils/*"]
+    }
   },
   "include": ["src"],
+
   "references": [{ "path": "./tsconfig.node.json" }]
 }
